--- a/juniorbrown.env
+++ b/juniorbrown.env
@@ -1,5 +1,3 @@
-export START_TIME=07
-export SPLITS=(14 23 38 51)
-export END_TIME=51
+export SPLITS=(07^14 14^23 23^38 38^51)
 export INPUT_FILE='Jr. Brown Form.mp4'
 export OUTPUT_FILE=juniorbrown
