--- a/Taegeuk6Jang-complete-720.env
+++ b/Taegeuk6Jang-complete-720.env
@@ -2,3 +2,4 @@ export VIDEO_URL=https://www.youtube.com/watch?v=jcBwWo4wN7c
 export SPLITS=(0:58^1:55)
 export INPUT_FILE='Taegeuk6Jang.mp4'
 export OUTPUT_FILE=Taegeuk6Jang
+export RESOLUTION=720
