--- a/Taegeuk1Jang-Complete-720.env
+++ b/Taegeuk1Jang-Complete-720.env
@@ -3,3 +3,4 @@ export SPLITS=(1:28^2:00)
 export INPUT_FILE='Taegeuk1Jang.mp4'
 export OUTPUT_FILE=Taegeuk1Jang
 export RESOLUTION=720
+export FPS=12
