--- a/Taegeuk2Jang-complete-720.env
+++ b/Taegeuk2Jang-complete-720.env
@@ -3,3 +3,4 @@ export SPLITS=(1:13^1:52)
 export INPUT_FILE='Taegeuk2Jang.mp4'
 export OUTPUT_FILE=Taegeuk2Jang
 export RESOLUTION=720
+export FPS=12
