--- a/Taegeuk4Jang-complete-720.env
+++ b/Taegeuk4Jang-complete-720.env
@@ -3,3 +3,4 @@ export SPLITS=(1:37^2:20)
 export INPUT_FILE='Taegeuk4Jang.mp4'
 export OUTPUT_FILE=Taegeuk4Jang
 export RESOLUTION=720
+export FPS=12
