--- a/Taegeuk5Jang-complete-720.env
+++ b/Taegeuk5Jang-complete-720.env
@@ -3,3 +3,4 @@ export SPLITS=(1:19^2:05)
 export INPUT_FILE='Taegeuk5Jang.mp4'
 export OUTPUT_FILE=Taegeuk5Jang
 export RESOLUTION=720
+export FPS=12
