--- a/Taegeuk6Jang-complete-720.env
+++ b/Taegeuk6Jang-complete-720.env
@@ -3,3 +3,4 @@ export SPLITS=(0:58^1:55)
 export INPUT_FILE='Taegeuk6Jang.mp4'
 export OUTPUT_FILE=Taegeuk6Jang
 export RESOLUTION=720
+export FPS=12
