--- a/Taegeuk3Jang-complete-720.env
+++ b/Taegeuk3Jang-complete-720.env
@@ -3,3 +3,4 @@ export SPLITS=(1:17^1:54)
 export INPUT_FILE='Taegeuk3Jang.mp4'
 export OUTPUT_FILE=Taegeuk3Jang
 export RESOLUTION=720
+export FPS=12
