--- a/JuniorBrownForm-720.env
+++ b/JuniorBrownForm-720.env
@@ -1,4 +1,4 @@
-export SPLITS=(07^14 14^23 23^38 38^51)
+export SPLITS="07^14,14^23,23^38,38^51"
 export INPUT_FILE='Jr. Brown Form.mp4'
 export OUTPUT_FILE=JuniorBrownForm
 export RESOLUTION=720
