--- a/JuniorBrownSparring-480.env
+++ b/JuniorBrownSparring-480.env
@@ -1,3 +1,3 @@
-export SPLITS=(12^19 25^32)
+export SPLITS="12^19,25^32"
 export INPUT_FILE='Jr. Brown One Step Sparring.mp4'
 export OUTPUT_FILE=JuniorBrownsparring
