--- a/SeniorBrownForm-parts-480.env
+++ b/SeniorBrownForm-parts-480.env
@@ -1,5 +1,3 @@
-export SPLITS=(9^22 21^35 34^46 45^54)
+export SPLITS="9^22,21^35,34^46,45^54"
 export INPUT_FILE='Sr. Brown Form.mp4'
 export OUTPUT_FILE=SeniorBrownForm
-export RESOLUTION=720
-export FPS=12
