--- a/SeniorBrownKicking-parts-480.env
+++ b/SeniorBrownKicking-parts-480.env
@@ -1,3 +1,3 @@
-export SPLITS=(8^12 16^22)
+export SPLITS="8^12,16^22"
 export INPUT_FILE='Sr. Brown Belt Kicking.mp4'
 export OUTPUT_FILE=SeniorBrownKicking
