--- a/Taegeuk4Jang-complete-480.env
+++ b/Taegeuk4Jang-complete-480.env
@@ -1,4 +1,4 @@
 export VIDEO_URL=https://www.youtube.com/watch?v=Lt917gacJho
-export SPLITS=(1:37^2:20)
+export SPLITS="1:37^2:20"
 export INPUT_FILE='Taegeuk4Jang.mp4'
 export OUTPUT_FILE=Taegeuk4Jang
