--- a/JuniorBrownForm-480.env
+++ b/JuniorBrownForm-480.env
@@ -1,3 +1,3 @@
-export SPLITS=(07^14 14^23 23^38 38^51)
+export SPLITS="07^14 14^23 23^38 38^51"
 export INPUT_FILE='Jr. Brown Form.mp4'
 export OUTPUT_FILE=JuniorBrownForm
