--- a/JuniorBrownKicking-720.env
+++ b/JuniorBrownKicking-720.env
@@ -1,4 +1,4 @@
-export SPLITS=(6^14 15^21)
+export SPLITS="6^14,15^21"
 export INPUT_FILE='Jr. Brown Kicking.mp4'
 export OUTPUT_FILE=JuniorBrownKicking
 export RESOLUTION=720
