--- a/JuniorBrownSparring-720.env
+++ b/JuniorBrownSparring-720.env
@@ -1,4 +1,4 @@
-export SPLITS=(12^19 25^32)
+export SPLITS="12^19,25^32"
 export INPUT_FILE='Jr. Brown One Step Sparring.mp4'
 export OUTPUT_FILE=JuniorBrownsparring
 export RESOLUTION=720
