--- a/SeniorBrownKicking-parts-720.env
+++ b/SeniorBrownKicking-parts-720.env
@@ -1,4 +1,4 @@
-export SPLITS=(8^12 16^22)
+export SPLITS="8^12,16^22"
 export INPUT_FILE='Sr. Brown Belt Kicking.mp4'
 export OUTPUT_FILE=SeniorBrownKicking
 export RESOLUTION=720
