--- a/SeniorBrownSparring-480.env
+++ b/SeniorBrownSparring-480.env
@@ -1,3 +1,3 @@
-export SPLITS=(10^16 23^30)
+export SPLITS="10^16,23^30"
 export INPUT_FILE='Sr. Brown One Step Sparring.mp4'
 export OUTPUT_FILE=SeniorBrownSparring
