--- a/SeniorBrownSparring-720.env
+++ b/SeniorBrownSparring-720.env
@@ -1,4 +1,4 @@
-export SPLITS=(10^16 23^30)
+export SPLITS="10^16,23^30"
 export INPUT_FILE='Sr. Brown One Step Sparring.mp4'
 export OUTPUT_FILE=SeniorBrownSparring
 export RESOLUTION=720
