--- a/Taegeuk1Jang-Complete-720.env
+++ b/Taegeuk1Jang-Complete-720.env
@@ -1,5 +1,5 @@
 export VIDEO_URL=https://www.youtube.com/watch?v=WhkjRruCBTo
-export SPLITS=(1:28^2:00)
+export SPLITS="1:28^2:00"
 export INPUT_FILE='Taegeuk1Jang.mp4'
 export OUTPUT_FILE=Taegeuk1Jang
 export RESOLUTION=720
