--- a/Taegeuk2Jang-complete-480.env
+++ b/Taegeuk2Jang-complete-480.env
@@ -1,4 +1,4 @@
 export VIDEO_URL=https://www.youtube.com/watch?v=tGlrUplKHh8
-export SPLITS=(1:13^1:52)
+export SPLITS="1:13^1:52"
 export INPUT_FILE='Taegeuk2Jang.mp4'
 export OUTPUT_FILE=Taegeuk2Jang
