--- a/Taegeuk3Jang-complete-720.env
+++ b/Taegeuk3Jang-complete-720.env
@@ -1,5 +1,5 @@
 export VIDEO_URL=https://www.youtube.com/watch?v=ksSqKt0UkWo
-export SPLITS=(1:17^1:54)
+export SPLITS="1:17^1:54"
 export INPUT_FILE='Taegeuk3Jang.mp4'
 export OUTPUT_FILE=Taegeuk3Jang
 export RESOLUTION=720
