--- a/Taegeuk6Jang-complete-480.env
+++ b/Taegeuk6Jang-complete-480.env
@@ -1,4 +1,4 @@
 export VIDEO_URL=https://www.youtube.com/watch?v=jcBwWo4wN7c
-export SPLITS=(1:00^1:55)
+export SPLITS="1:00^1:55"
 export INPUT_FILE='Taegeuk6Jang.mp4'
 export OUTPUT_FILE=Taegeuk6Jang
