--- a/Taegeuk5Jang-Parts.env
+++ b/Taegeuk5Jang-Parts.env
@@ -2,3 +2,5 @@ export VIDEO_URL=https://www.youtube.com/watch?v=VdqNEAHWCBM
 export SPLITS="5:45^5:55,7:00^7:18,8:33^8:55,9:54^10:18"
 export INPUT_FILE='Taegeuk5Jang.mp4'
 export OUTPUT_FILE=Taegeuk5Jang
+export RESOLUTION=720
+export FPS=12
