--- a/docker-compose.taegeuk3.yaml
+++ b/docker-compose.taegeuk3.yaml
@@ -23,3 +23,7 @@ services:
         <<: *default-app
         env_file:
         - JuniorBlueSparring.env
+    jr-blue-kicking:
+        <<: *default-app
+        env_file:
+        - JuniorBlueKicking.env
