--- a/docker-compose.taegeuk7.yaml
+++ b/docker-compose.taegeuk7.yaml
@@ -27,6 +27,34 @@ services:
         <<: *default-app
         env_file:
             - Taegeuk7Jang-GeodeureoBatangson2.env
+    taegeuk7-Bojumeok1:
+        <<: *default-app
+        env_file:
+            - Taegeuk7Jang-Bojumeok1.env
+    taegeuk7-Gawimakgi1:
+        <<: *default-app
+        env_file:
+            - Taegeuk7Jang-Gawimakgi1.env
+    taegeuk7-Mureupchigi1:
+        <<: *default-app
+        env_file:
+            - Taegeuk7Jang-Mureupchigi1.env
+    taegeuk7-Mureupchigi1:
+        <<: *default-app
+        env_file:
+            - Taegeuk7Jang-Mureupchigi2.env
+    taegeuk7-Hecheomakgi1:
+        <<: *default-app
+        env_file:
+            - Taegeuk7Jang-Hecheomakgi1.env
+    taegeuk7-DujumeokJeocheoJireugi1:
+        <<: *default-app
+        env_file:
+            - Taegeuk7Jang-DujumeokJeocheoJireugi1.env
+    taegeuk7-DujumeokJeocheoJireugi2:
+        <<: *default-app
+        env_file:
+            - Taegeuk7Jang-DujumeokJeocheoJireugi2.env
     # sr-blue-form-complete:
     #     <<: *default-app
     #     env_file:
