--- a/docker-compose.taegeuk7.yaml
+++ b/docker-compose.taegeuk7.yaml
@@ -7,14 +7,14 @@ x-app: &default-app
         - ./output:/output
 
 services:
-    # taegeuk7-parts:
-    #     <<: *default-app
-    #     env_file:
-    #         - Taegeuk7Jang-Parts.env
     taegeuk7-complete:
         <<: *default-app
         env_file:
             - Taegeuk7Jang-complete.env
+    taegeuk7-parts:
+        <<: *default-app
+        env_file:
+            - Taegeuk7Jang-parts.env
     taegeuk7-SonalGeodeureoArae:
         <<: *default-app
         env_file:
@@ -59,11 +59,15 @@ services:
         <<: *default-app
         env_file:
             - Taegeuk7Jang-UtgeoreoArae1.env
-    # sr-blue-form-complete:
-    #     <<: *default-app
-    #     env_file:
-    #     - SeniorBlueForm-complete.env
-    # sr-blue-sparring:
-    #     <<: *default-app
-    #     env_file:
-    #     - SeniorBlueSparring.env
+    jr-red-form-complete:
+        <<: *default-app
+        env_file:
+        - JuniorRedForm-complete.env
+    jr-red-sparring:
+        <<: *default-app
+        env_file:
+        - JuniorRedSparring.env
+    jr-red-kicking:
+        <<: *default-app
+        env_file:
+        - JuniorRedKicking.env
